Refactoring newInstance mechanism